<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity" >

    <include
        android:id="@+id/include1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        layout="@layout/menu_bar" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_below="@id/topItem"
        android:gravity="center_horizontal"
        android:text="@string/item_name"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <View
        android:id="@+id/separator_1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/item_name"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/quantity_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/separator_1"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/quantity_heading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/decrement_quantity"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/item_quantity"
        android:layout_toLeftOf="@+id/item_quantity"
        android:text="@string/minus" />

    <TextView
        android:id="@+id/item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/increment_quantity"
        android:layout_toLeftOf="@+id/increment_quantity"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/price_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quantity_header"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/price_heading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/price_heading"
        android:layout_alignLeft="@+id/decrement_quantity"
        android:layout_alignParentRight="true"
        android:text="@string/default_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/increment_quantity"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/quantity_header"
        android:layout_alignRight="@+id/item_name"
        android:text="@string/plus" />


    <View
        android:id="@+id/separator_3"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/remove_button"
        android:layout_margin="10dp"
        android:background="#ffffff" />

    <View
        android:id="@+id/separator_2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/total_tag"
        android:layout_margin="15dp"
        android:background="#ffffff" />

    <Button
        android:id="@+id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/separator_2"
        android:text="@string/remove_button" />

    <TextView
        android:id="@+id/total_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/price_heading"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/total_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/total_tag"
        android:layout_alignBottom="@+id/total_tag"
        android:layout_alignLeft="@+id/item_price"
        android:layout_alignParentRight="true"
        android:text="@string/default_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/find_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/aisle_button"
        android:layout_alignBottom="@+id/aisle_button"
        android:layout_alignParentRight="true"
        android:text="@string/find_button" />

    <Button
        android:id="@+id/aisle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator_3"
        android:layout_toLeftOf="@+id/find_button"
        android:layout_toRightOf="@+id/back_button"
        android:text="@string/aisle_button" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/separator_3"
        android:text="@string/activity_return" />

</RelativeLayout>