<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/search_add_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="32dp"
			android:focusableInTouchMode="false"
			android:clickable="false"
			android:focusable="false"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/search_add" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:focusableInTouchMode="false"
			android:clickable="false"
			android:focusable="false"
            android:layout_centerVertical="true"
            android:text="@string/list_item_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
			android:focusableInTouchMode="false"
			android:clickable="false"
			android:focusable="false"
            android:layout_toLeftOf="@+id/increment_quantity"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/decrement_quantity"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
			android:focusableInTouchMode="false"
			android:clickable="false"
			android:focusable="false"
            android:layout_toLeftOf="@+id/item_quantity"
            android:text="@string/minus" />

        <Button
            android:id="@+id/increment_quantity"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
			android:focusableInTouchMode="false"
			android:clickable="false"
			android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:layout_toLeftOf="@+id/search_add_button"
            android:text="@string/plus" />

    </RelativeLayout>

</LinearLayout>