<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/item_action_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="33dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/button_carrot"
            android:text="@string/list_item_carrot" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/in_cart"
            android:text="@string/list_item_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/in_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/item_name"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/increment_quantity" />

        <TextView
            android:id="@+id/item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@+id/increment_quantity"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/decrement_quantity"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/item_quantity"
            android:scaleType="fitCenter"
            android:src="@drawable/button_decrement"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/increment_quantity"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="38dp"
            android:layout_toLeftOf="@+id/item_action_button"
            android:src="@drawable/button_increment"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"/>

    </RelativeLayout>

</LinearLayout>